--- a/Galeria3.html
+++ b/Galeria3.html
@@ -18,46 +18,46 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 57', 'imagenes/Imagen57.jpeg')">
+        <div class="photo" onclick="openModal('1er Día', 'Paseo por Miraflores', 'imagenes/Imagen57.jpeg')">
             <img src="imagenes/Imagen57.jpeg" alt="Foto 57">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 58', 'imagenes/Imagen58.jpeg')">
+        <div class="photo" onclick="openModal('Gato siesta', 'El gato todo un maldite bien jatazo en plena exhibición', 'imagenes/Imagen58.jpeg')">
             <img src="imagenes/Imagen58.jpeg" alt="Foto 58">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 59', 'imagenes/Imagen59.jpeg')">
+        <div class="photo" onclick="openModal('Playa drunk', 'WTTFFf?? 4loko de 15 sooo???', 'imagenes/Imagen59.jpeg')">
             <img src="imagenes/Imagen59.jpeg" alt="Foto 59">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 60', 'imagenes/Imagen60.jpeg')">
+        <div class="photo" onclick="openModal('Fotis', 'Antes de la caída kajhjshjhaj', 'imagenes/Imagen60.jpeg')">
             <img src="imagenes/Imagen60.jpeg" alt="Foto 60">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 61', 'imagenes/Imagen61.jpeg')">
+        <div class="photo" onclick="openModal('Fotis', 'Luego de la caída dándonos mucho cariñito', 'imagenes/Imagen61.jpeg')">
             <img src="imagenes/Imagen61.jpeg" alt="Foto 61">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 62', 'imagenes/Imagen62.jpeg')">
+        <div class="photo" onclick="openModal('Cigarrito corazón', 'Mi mininita con sus deditos hizo un corazó nen la tierra cy puso dos cigarrillos en el centro <3', 'imagenes/Imagen62.jpeg')">
             <img src="imagenes/Imagen62.jpeg" alt="Foto 62">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 63', 'imagenes/Imagen63.jpeg')">
+        <div class="photo" onclick="openModal('Hermosisisisiisisma', 'Fotis de su carita hermosa', 'imagenes/Imagen63.jpeg')">
             <img src="imagenes/Imagen63.jpeg" alt="Foto 63">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 64', 'imagenes/Imagen64.jpeg')">
+        <div class="photo" onclick="openModal('Besito', 'Le llegó el besito que el mandé vía maripogay', 'imagenes/Imagen64.jpeg')">
             <img src="imagenes/Imagen64.jpeg" alt="Foto 64">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 65', 'imagenes/Imagen65.jpeg')">
+        <div class="photo" onclick="openModal('Rikazooo', 'Lomazo saltado sin arroz', 'imagenes/Imagen65.jpeg')">
             <img src="imagenes/Imagen65.jpeg" alt="Foto 65">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 66', 'imagenes/Imagen66.jpeg')">
+        <div class="photo" onclick="openModal('Turroncito', 'Su rico turrón para mi amorcito', 'imagenes/Imagen66.jpeg')">
             <img src="imagenes/Imagen66.jpeg" alt="Foto 66">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 67', 'imagenes/Imagen67.jpeg')">
+        <div class="photo" onclick="openModal('Una looocaaaa', 'La paciente perfecta', 'imagenes/Imagen67.jpeg')">
             <img src="imagenes/Imagen67.jpeg" alt="Foto 67">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 68', 'imagenes/Imagen68.jpeg')">
+        <div class="photo" onclick="openModal('SU primera robada de estado', 'Tuvo que pedir permiso ajhsjhhajdjhs', 'imagenes/Imagen68.jpeg')">
             <img src="imagenes/Imagen68.jpeg" alt="Foto 68">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 69', 'imagenes/Imagen69.jpeg')">
+        <div class="photo" onclick="openModal('Momento Xd', 'Confundió los numeros de la maquina y sacó un wafer XD', 'imagenes/Imagen69.jpeg')">
             <img src="imagenes/Imagen69.jpeg" alt="Foto 69">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 70', 'imagenes/Imagen70.jpeg')">
+        <div class="photo" onclick="openModal('Limonade Pink', 'Una limonada rosa WTFFF???', 'imagenes/Imagen70.jpeg')">
             <img src="imagenes/Imagen70.jpeg" alt="Foto 70">
         </div>
         
@@ -92,11 +92,6 @@
             var modal = document.getElementById("modal");
             modal.style.display = "none";
         }
-
-        window.addEventListener("load", function () {
-            var loaderContainer = document.querySelector(".loader-container");
-            loaderContainer.style.display = "none";
-        });
 
     </script>
 </body>
