--- a/Galeria3.html
+++ b/Galeria3.html
@@ -60,7 +60,24 @@
         <div class="photo" onclick="openModal('Limonade Pink', 'Una limonada rosa WTFFF???', 'imagenes/Imagen70.jpeg')">
             <img src="imagenes/Imagen70.jpeg" alt="Foto 70">
         </div>
-        
+        <div class="photo" onclick="openModal('Rikazooo', 'Lomazo saltado sin arroz', 'imagenes/Imagen71.jpeg')">
+            <img src="imagenes/Imagen71.jpeg" alt="Foto 71">
+        </div>
+        <div class="photo" onclick="openModal('Turroncito', 'Su rico turrón para mi amorcito', 'imagenes/Imagen72.jpeg')">
+            <img src="imagenes/Imagen72.jpeg" alt="Foto 72">
+        </div>
+        <div class="photo" onclick="openModal('Una looocaaaa', 'La paciente perfecta', 'imagenes/Imagen73.jpeg')">
+            <img src="imagenes/Imagen73.jpeg" alt="Foto 73">
+        </div>
+        <div class="photo" onclick="openModal('SU primera robada de estado', 'Tuvo que pedir permiso ajhsjhhajdjhs', 'imagenes/Imagen74.jpeg')">
+            <img src="imagenes/Imagen74.jpeg" alt="Foto 74">
+        </div>
+        <div class="photo" onclick="openModal('Momento Xd', 'Confundió los numeros de la maquina y sacó un wafer XD', 'imagenes/Imagen75.jpeg')">
+            <img src="imagenes/Imagen75.jpeg" alt="Foto 75">
+        </div>
+        <div class="photo" onclick="openModal('Limonade Pink', 'Una limonada rosa WTFFF???', 'imagenes/Imagen76.jpeg')">
+            <img src="imagenes/Imagen76.jpeg" alt="Foto 76">
+        </div>
 
     <!-- Agrega más elementos .photo para más fotos -->
     </div>
