--- a/Galeria3.html
+++ b/Galeria3.html
@@ -60,22 +60,20 @@
         <div class="photo" onclick="openModal('Limonade Pink', 'Una limonada rosa WTFFF???', 'imagenes/Imagen70.jpeg')">
             <img src="imagenes/Imagen70.jpeg" alt="Foto 70">
         </div>
-        <div class="photo" onclick="openModal('Rikazooo', 'Lomazo saltado sin arroz', 'imagenes/Imagen71.jpeg')">
+        <div class="photo" onclick="openModal('Las primeras', 'Las primeras flores que me dan en mi vida', 'imagenes/Imagen71.jpeg')">
             <img src="imagenes/Imagen71.jpeg" alt="Foto 71">
         </div>
-        <div class="photo" onclick="openModal('Turroncito', 'Su rico turrón para mi amorcito', 'imagenes/Imagen72.jpeg')">
+        <div class="photo" onclick="openModal('Pto cat', 'También le gustan las flores', 'imagenes/Imagen72.jpeg')">
             <img src="imagenes/Imagen72.jpeg" alt="Foto 72">
         </div>
-        <div class="photo" onclick="openModal('Una looocaaaa', 'La paciente perfecta', 'imagenes/Imagen73.jpeg')">
+        <div class="photo" onclick="openModal('Flrocitas', 'Llenando de alegria y fuerzas mi día a día', 'imagenes/Imagen73.jpeg')">
             <img src="imagenes/Imagen73.jpeg" alt="Foto 73">
         </div>
-        <div class="photo" onclick="openModal('SU primera robada de estado', 'Tuvo que pedir permiso ajhsjhhajdjhs', 'imagenes/Imagen74.jpeg')">
-            <img src="imagenes/Imagen74.jpeg" alt="Foto 74">
         </div>
-        <div class="photo" onclick="openModal('Momento Xd', 'Confundió los numeros de la maquina y sacó un wafer XD', 'imagenes/Imagen75.jpeg')">
+        <div class="photo" onclick="openModal('Luki vet', 'Llevando a Luke al veterinario si que si, todo en orden', 'imagenes/Imagen75.jpeg')">
             <img src="imagenes/Imagen75.jpeg" alt="Foto 75">
         </div>
-        <div class="photo" onclick="openModal('Limonade Pink', 'Una limonada rosa WTFFF???', 'imagenes/Imagen76.jpeg')">
+        <div class="photo" onclick="openModal('Desayuno', '7:30 am para llegar tempranito al hospital, my amorcito bella', 'imagenes/Imagen76.jpeg')">
             <img src="imagenes/Imagen76.jpeg" alt="Foto 76">
         </div>
 
