--- a/Galeria3.html
+++ b/Galeria3.html
@@ -68,13 +68,27 @@
         </div>
         <div class="photo" onclick="openModal('Flrocitas', 'Llenando de alegria y fuerzas mi día a día', 'imagenes/Imagen73.jpeg')">
             <img src="imagenes/Imagen73.jpeg" alt="Foto 73">
-        </div>
-        </div>
+        </div>        
         <div class="photo" onclick="openModal('Luki vet', 'Llevando a Luke al veterinario si que si, todo en orden', 'imagenes/Imagen75.jpeg')">
             <img src="imagenes/Imagen75.jpeg" alt="Foto 75">
         </div>
         <div class="photo" onclick="openModal('Desayuno', '7:30 am para llegar tempranito al hospital, my amorcito bella', 'imagenes/Imagen76.jpeg')">
             <img src="imagenes/Imagen76.jpeg" alt="Foto 76">
+        </div>
+        <div class="photo" onclick="openModal('WTFFFF??', 'Un patito en su cabecita mientras veía un documental de carnicería', 'imagenes/Imagen77.jpeg')">
+            <img src="imagenes/Imagen77.jpeg" alt="Foto 77">
+        </div>
+        <div class="photo" onclick="openModal('Luke and Tabooo', 'Fotito de los pewos que le pedí a mi amorcito hermosa', 'imagenes/Imagen78.jpeg')">
+            <img src="imagenes/Imagen78.jpeg" alt="Foto 78">
+        </div>
+        <div class="photo" onclick="openModal('Me enamora', 'Linda preciosa hermosa carita que me enamora cada día', 'imagenes/Imagen79.jpeg')">
+            <img src="imagenes/Imagen79.jpeg" alt="Foto 79">
+        </div>        
+        <div class="photo" onclick="openModal('Prototipo', 'Realizando el prototipo de almohada musical con mi amorcito', 'imagenes/Imagen80.jpeg')">
+            <img src="imagenes/Imagen80.jpeg" alt="Foto 80">
+        </div>
+        <div class="photo" onclick="openModal('TS & DK', 'Buenos traguitos con mi amorcito', 'imagenes/Imagen81.jpeg')">
+            <img src="imagenes/Imagen81.jpeg" alt="Foto 81">
         </div>
 
     <!-- Agrega más elementos .photo para más fotos -->
