--- a/Galeria3.html
+++ b/Galeria3.html
@@ -66,7 +66,7 @@
         <div class="photo" onclick="openModal('Pto cat', 'También le gustan las flores', 'imagenes/Imagen72.jpeg')">
             <img src="imagenes/Imagen72.jpeg" alt="Foto 72">
         </div>
-        <div class="photo" onclick="openModal('Flrocitas', 'Llenando de alegria y fuerzas mi día a día', 'imagenes/Imagen73.jpeg')">
+        <div class="photo" onclick="openModal('Florcitas', 'Llenando de alegria y fuerzas mi día a día', 'imagenes/Imagen73.jpeg')">
             <img src="imagenes/Imagen73.jpeg" alt="Foto 73">
         </div>        
         <div class="photo" onclick="openModal('Luki vet', 'Llevando a Luke al veterinario si que si, todo en orden', 'imagenes/Imagen75.jpeg')">
@@ -90,11 +90,19 @@
         <div class="photo" onclick="openModal('TS & DK', 'Buenos traguitos con mi amorcito', 'imagenes/Imagen81.jpeg')">
             <img src="imagenes/Imagen81.jpeg" alt="Foto 81">
         </div>
-
+        <div class="photo" onclick="openModal('Momidos', 'Durmiendo con Tonny, se coló Xd', 'imagenes/Imagen82.jpeg')">
+            <img src="imagenes/Imagen82.jpeg" alt="Foto 82">
+        </div>
+        <div class="photo" onclick="openModal('Amo amo amo', 'Amo esos detallitos que me da mi amorcito, me sorprendió, no pude abrazarla ni besarla mucho mucho pq sus abuelitos estaban presentes jijijij, me encanta la adoro', 'imagenes/Imagen83.jpeg')">
+            <img src="imagenes/Imagen83.jpeg" alt="Foto 83">
+        </div>    
+        <div class="photo" onclick="openModal('RATAAA NOOOO', 'Queriendo acabar con su existencia con una bolsa pipipipiii', 'imagenes/Imagen85.jpeg')">
+            <img src="imagenes/Imagen85.jpeg" alt="Foto 85">
+        </div>
+        
+        </div>
     <!-- Agrega más elementos .photo para más fotos -->
-    </div>
-
-
+    
     <div class="modal" id="modal" onclick="closeModal()">
         <div class="modal-content" onclick="event.stopPropagation();">
             <h2 id="modal-title">Título de la Foto</h2>
