--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="container">
-        <h1>Mes de turrones 😼</h1>
+        <h1>Por fin encontramos a las personas correctas mininito</h1>
         <!--<p>Da todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices. Ya se viene el
             buen estrés, presión y tareas 😼.</p>
         <p>Te quiere bonito,<br>Renzo</p>-->
