--- a/Galeria4.html
+++ b/Galeria4.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylegalery.css">
     <link rel="icon" href="imagenes/ImagenA.jpeg">
 
-    <title>Tercera Galeria</title>
+    <title>Cuarta Galeria</title>
 </head>
 
 <body>
@@ -30,91 +30,8 @@
         <div class="photo" onclick="openModal('Fotis', 'Antes de la caída kajhjshjhaj', 'imagenes/Imagen60.jpeg')">
             <img src="imagenes/Imagen60.jpeg" alt="Foto 60">
         </div>
-        <div class="photo" onclick="openModal('Fotis', 'Luego de la caída dándonos mucho cariñito', 'imagenes/Imagen61.jpeg')">
-            <img src="imagenes/Imagen61.jpeg" alt="Foto 61">
-        </div>
-        <div class="photo" onclick="openModal('Cigarrito corazón', 'Mi mininita con sus deditos hizo un corazó nen la tierra cy puso dos cigarrillos en el centro <3', 'imagenes/Imagen62.jpeg')">
-            <img src="imagenes/Imagen62.jpeg" alt="Foto 62">
-        </div>
-        <div class="photo" onclick="openModal('Hermosisisisiisisma', 'Fotis de su carita hermosa', 'imagenes/Imagen63.jpeg')">
-            <img src="imagenes/Imagen63.jpeg" alt="Foto 63">
-        </div>
-        <div class="photo" onclick="openModal('Besito', 'Le llegó el besito que el mandé vía maripogay', 'imagenes/Imagen64.jpeg')">
-            <img src="imagenes/Imagen64.jpeg" alt="Foto 64">
-        </div>
-        <div class="photo" onclick="openModal('Rikazooo', 'Lomazo saltado sin arroz', 'imagenes/Imagen65.jpeg')">
-            <img src="imagenes/Imagen65.jpeg" alt="Foto 65">
-        </div>
-        <div class="photo" onclick="openModal('Turroncito', 'Su rico turrón para mi amorcito', 'imagenes/Imagen66.jpeg')">
-            <img src="imagenes/Imagen66.jpeg" alt="Foto 66">
-        </div>
-        <div class="photo" onclick="openModal('Una looocaaaa', 'La paciente perfecta', 'imagenes/Imagen67.jpeg')">
-            <img src="imagenes/Imagen67.jpeg" alt="Foto 67">
-        </div>
-        <div class="photo" onclick="openModal('SU primera robada de estado', 'Tuvo que pedir permiso ajhsjhhajdjhs', 'imagenes/Imagen68.jpeg')">
-            <img src="imagenes/Imagen68.jpeg" alt="Foto 68">
-        </div>
-        <div class="photo" onclick="openModal('Momento Xd', 'Confundió los numeros de la maquina y sacó un wafer XD', 'imagenes/Imagen69.jpeg')">
-            <img src="imagenes/Imagen69.jpeg" alt="Foto 69">
-        </div>
-        <div class="photo" onclick="openModal('Limonade Pink', 'Una limonada rosa WTFFF???', 'imagenes/Imagen70.jpeg')">
-            <img src="imagenes/Imagen70.jpeg" alt="Foto 70">
-        </div>
-        <div class="photo" onclick="openModal('Las primeras', 'Las primeras flores que me dan en mi vida', 'imagenes/Imagen71.jpeg')">
-            <img src="imagenes/Imagen71.jpeg" alt="Foto 71">
-        </div>
-        <div class="photo" onclick="openModal('Pto cat', 'También le gustan las flores', 'imagenes/Imagen72.jpeg')">
-            <img src="imagenes/Imagen72.jpeg" alt="Foto 72">
-        </div>
-        <div class="photo" onclick="openModal('Florcitas', 'Llenando de alegria y fuerzas mi día a día', 'imagenes/Imagen73.jpeg')">
-            <img src="imagenes/Imagen73.jpeg" alt="Foto 73">
-        </div>        
-        <div class="photo" onclick="openModal('Luki vet', 'Llevando a Luke al veterinario si que si, todo en orden', 'imagenes/Imagen75.jpeg')">
-            <img src="imagenes/Imagen75.jpeg" alt="Foto 75">
-        </div>
-        <div class="photo" onclick="openModal('Desayuno', '7:30 am para llegar tempranito al hospital, my amorcito bella', 'imagenes/Imagen76.jpeg')">
-            <img src="imagenes/Imagen76.jpeg" alt="Foto 76">
-        </div>
-        <div class="photo" onclick="openModal('WTFFFF??', 'Un patito en su cabecita mientras veía un documental de carnicería', 'imagenes/Imagen77.jpeg')">
-            <img src="imagenes/Imagen77.jpeg" alt="Foto 77">
-        </div>
-        <div class="photo" onclick="openModal('Luke and Tabooo', 'Fotito de los pewos que le pedí a mi amorcito hermosa', 'imagenes/Imagen78.jpeg')">
-            <img src="imagenes/Imagen78.jpeg" alt="Foto 78">
-        </div>
-        <div class="photo" onclick="openModal('Me enamora', 'Linda preciosa hermosa carita que me enamora cada día', 'imagenes/Imagen79.jpeg')">
-            <img src="imagenes/Imagen79.jpeg" alt="Foto 79">
-        </div>        
-        <div class="photo" onclick="openModal('Prototipo', 'Realizando el prototipo de almohada musical con mi amorcito', 'imagenes/Imagen80.jpeg')">
-            <img src="imagenes/Imagen80.jpeg" alt="Foto 80">
-        </div>
-        <div class="photo" onclick="openModal('TS & DK', 'Buenos traguitos con mi amorcito', 'imagenes/Imagen81.jpeg')">
-            <img src="imagenes/Imagen81.jpeg" alt="Foto 81">
-        </div>
-        <div class="photo" onclick="openModal('Momidos', 'Durmiendo con Tonny, se coló Xd', 'imagenes/Imagen82.jpeg')">
-            <img src="imagenes/Imagen82.jpeg" alt="Foto 82">
-        </div>
-        <div class="photo" onclick="openModal('Amo amo amo', 'Amo esos detallitos que me da mi amorcito, me sorprendió, no pude abrazarla ni besarla mucho mucho pq sus abuelitos estaban presentes jijijij, me encanta la adoro', 'imagenes/Imagen83.jpeg')">
-            <img src="imagenes/Imagen83.jpeg" alt="Foto 83">
-        </div>    
-        <div class="photo" onclick="openModal('RATAAA NOOOO', 'Queriendo acabar con su existencia con una bolsa pipipipiii', 'imagenes/Imagen85.jpeg')">
-            <img src="imagenes/Imagen85.jpeg" alt="Foto 85">
-        </div>
+
         
-        <div class="photo" onclick="openModal('Arigadites', 'JHjhkaskjAKJHS dentro de una sola casaca', 'imagenes/Imagen86.jpeg')">
-            <img src="imagenes/Imagen86.jpeg" alt="Foto 86">
-        </div>
-        <div class="photo" onclick="openModal('Pelicula', 'Las canchitas más ricas que he probado', 'imagenes/Imagen87.jpeg')">
-            <img src="imagenes/Imagen87.jpeg" alt="Foto 87">
-        </div>
-        <div class="photo" onclick="openModal('Jijijasjahj', 'Una mirada de odiooo, amo', 'imagenes/Imagen88.jpeg')">
-            <img src="imagenes/Imagen88.jpeg" alt="Foto 88">
-        </div>
-        <div class="photo" onclick="openModal('Momiidooos', 'Piola momiendo y descansando demo cuando estan despiertos, un escandaleeee', 'imagenes/Imagen89.jpeg')">
-            <img src="imagenes/Imagen89.jpeg" alt="Foto 89">
-        </div>    
-        <div class="photo" onclick="openModal('Florcites', 'Estuvieron hasta el ultimo, y tengo una florcita para mi gran recuerdo, las primeras flores que me dieron amo', 'imagenes/Imagen90.jpeg')">
-            <img src="imagenes/Imagen90.jpeg" alt="Foto 90">
-        </div>
         
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
