--- a/Galeria3.html
+++ b/Galeria3.html
@@ -153,7 +153,7 @@
     </div>
     <br>
     <div>
-        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
+        <a href="Galeria4.html" type="button" class="color-button-back"> Siguiente </a>
     </div>
 </footer>
 <br>
