--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Por fin encontramos a las personas correctas mininito</h1>
         <!--<p>Da todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices. Ya se viene el
             buen estrés, presión y tareas 😼.</p>
-        <p>Te quiere bonito,<br>Renzo</p>-->
+        <p>Te quiere bonito,<br>Renzo</p>
         <p> Tus ojos brillan como el cielo estrellado, </br>
             En ellos encuentro un amor tan apasionado. </br>
             Como rosas rojas, de pasión encendidos, </br>
@@ -31,7 +31,8 @@
             En tu mirada encuentro un mundo de ternura, </br>
             Un universo de amor, sin medida ni censura. </br>
             Así que en este verso te digo con certeza, </br>
-            Que en tus ojos hallé la más hermosa belleza.</p>
+            Que en tus ojos hallé la más hermosa belleza.</p>-->
+        <p>Simplemente te amo</p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
