--- a/Galeria4.html
+++ b/Galeria4.html
@@ -18,17 +18,35 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('1er Día', 'Paseo por Miraflores', 'imagenes/Imagen57.jpeg')">
-            <img src="imagenes/Imagen57.jpeg" alt="Foto 57">
+        <div class="photo" onclick="openModal('Contando', 'Fotis con mi mininita mientras ve si le falta un dedo, bromiiitaaa', 'imagenes/Imagen91.jpeg')">
+            <img src="imagenes/Imagen91.jpeg" alt="Foto 91">
         </div>
-        <div class="photo" onclick="openModal('Gato siesta', 'El gato todo un maldite bien jatazo en plena exhibición', 'imagenes/Imagen58.jpeg')">
-            <img src="imagenes/Imagen58.jpeg" alt="Foto 58">
+        <div class="photo" onclick="openModal('Helades', 'Un rico helado de maracuyá, frio rico de maracuyá', 'imagenes/Imagen92.jpeg')">
+            <img src="imagenes/Imagen92.jpeg" alt="Foto 92">
         </div>
-        <div class="photo" onclick="openModal('Playa drunk', 'WTTFFf?? 4loko de 15 sooo???', 'imagenes/Imagen59.jpeg')">
-            <img src="imagenes/Imagen59.jpeg" alt="Foto 59">
+	<div class="photo" onclick="openModal('Día de Robo', 'Su rica robada de caramandunga en la pepa de los empleados de plaza vea', 'imagenes/Imagen93.jpeg')">
+            <img src="imagenes/Imagen93.jpeg" alt="Foto 93">
         </div>
-        <div class="photo" onclick="openModal('Fotis', 'Antes de la caída kajhjshjhaj', 'imagenes/Imagen60.jpeg')">
-            <img src="imagenes/Imagen60.jpeg" alt="Foto 60">
+	<div class="photo" onclick="openModal('Día de compras', 'Mi mininita hermosa me acompañó a comprar comidita para el cat and dog', 'imagenes/Imagen94.jpeg')">
+            <img src="imagenes/Imagen94.jpeg" alt="Foto 94">
+        </div>
+	<div class="photo" onclick="openModal('Youtuber fav', 'Preciosa, bella, hermosa enamorada viendo a su youtuber fav', 'imagenes/Imagen95.jpeg')">
+            <img src="imagenes/Imagen95.jpeg" alt="Foto 95">
+        </div>
+	<div class="photo" onclick="openModal('Feliz con mi gran collar', 'Me encanta esté collar amor, adoro', 'imagenes/Imagen96.jpeg')">
+            <img src="imagenes/Imagen96.jpeg" alt="Foto 96">
+        </div>
+	<div class="photo" onclick="openModal('Momento kizzpe?', 'Mi mininita piola pasando por la jai de ese pelo pintao para meter terror a su timbre', 'imagenes/Imagen97.jpeg')">
+            <img src="imagenes/Imagen97.jpeg" alt="Foto 97">
+        </div>
+	<div class="photo" onclick="openModal('Tmr el diablo', 'Litt el mismísimo diablo', 'imagenes/Imagen98.jpeg')">
+            <img src="imagenes/Imagen98.jpeg" alt="Foto 98">
+        </div>
+	<div class="photo" onclick="openModal('Mi adicción', 'Coronita mientras espero a mi mininita, diriendo ese day F', 'imagenes/Imagen99.jpeg')">
+            <img src="imagenes/Imagen99.jpeg" alt="Foto 99">
+        </div>
+	<div class="photo" onclick="openModal('Mis pweoooos', 'Siento su bienvenida todos los días', 'imagenes/Imagen100.jpeg')">
+            <img src="imagenes/Imagen100.jpeg" alt="Foto 100">
         </div>
 
         
