--- a/Galeria4.html
+++ b/Galeria4.html
@@ -48,7 +48,48 @@
 	<div class="photo" onclick="openModal('Mis pweoooos', 'Siento su bienvenida todos los días', 'imagenes/Imagen100.jpeg')">
             <img src="imagenes/Imagen100.jpeg" alt="Foto 100">
         </div>
-
+	<div class="photo" onclick="openModal('Amo', 'Adoro sus flores, la amo', 'imagenes/Imagen101.jpeg')">
+            <img src="imagenes/Imagen101.jpeg" alt="Foto 101">
+        </div>
+	<div class="photo" onclick="openModal('Perfección', 'Amo', 'imagenes/Imagen102.jpeg')">
+            <img src="imagenes/Imagen102.jpeg" alt="Foto 102">
+        </div>
+	<div class="photo" onclick="openModal('Casí F', 'Se nos iba el gato', 'imagenes/Imagen103.jpeg')">
+            <img src="imagenes/Imagen103.jpeg" alt="Foto 103">
+        </div>
+	<div class="photo" onclick="openModal('Jasjhjhasjhjh', 'Amo esas fotis', 'imagenes/Imagen104.jpeg')">
+            <img src="imagenes/Imagen104.jpeg" alt="Foto 104">
+        </div>
+	<div class="photo" onclick="openModal('PTMIERDA QUE RICO', 'Que se repita, que rico crj, amé, amo y maré su salchipapa', 'imagenes/Imagen105.jpeg')">
+            <img src="imagenes/Imagen105.jpeg" alt="Foto 105">
+        </div>
+	<div class="photo" onclick="openModal('Gracias amochi', 'A un min de ir al colapso, llega mi amorcito y plim, me da una hermosa billetera 100% cuero', 'imagenes/Imagen106.jpeg')">
+            <img src="imagenes/Imagen106.jpeg" alt="Foto 106">
+        </div>
+	<div class="photo" onclick="openModal('Riquisimo', 'Una de las especialidades de mi amorcito', 'imagenes/Imagen107.jpeg')">
+            <img src="imagenes/Imagen107.jpeg" alt="Foto 107">
+        </div>
+	<div class="photo" onclick="openModal('Mininita Practica', 'Amoooo, viendo como va desarrollandose mi amocito adoro', 'imagenes/Imagen108.jpeg')">
+            <img src="imagenes/Imagen108.jpeg" alt="Foto 108">
+        </div>
+	<div class="photo" onclick="openModal('Sale su rico panetón tmr', 'Amor sorprendeme cualquier día con un panetón tottus pls, y un frugos del valle de durazno, jijijijj', 'imagenes/Imagen109.jpeg')">
+            <img src="imagenes/Imagen109.jpeg" alt="Foto 109">
+        </div>
+	<div class="photo" onclick="openModal('El amor lo puede todo', 'De dos mundos distintos jijijj', 'imagenes/Imagen110.jpeg')">
+            <img src="imagenes/Imagen110.jpeg" alt="Foto 110">
+        </div>
+	<div class="photo" onclick="openModal('Mi maravilla del mundo', 'Amo esas uñitas, largas o pequeñas, las adoro', 'imagenes/Imagen111.jpeg')">
+            <img src="imagenes/Imagen111.jpeg" alt="Foto 111">
+        </div>
+	<div class="photo" onclick="openModal('Maldite', 'La maldite locaaa mordió a mi amorciitooo', 'imagenes/Imagen112.jpeg')">
+            <img src="imagenes/Imagen112.jpeg" alt="Foto 112">
+        </div>
+	<div class="photo" onclick="openModal('Perfectamente bella', 'Le rezo a mi amocito', 'imagenes/Imagen113.jpeg')">
+            <img src="imagenes/Imagen113.jpeg" alt="Foto 113">
+        </div>
+	<div class="photo" onclick="openModal('Su rikisima chanfainita', 'PTMR QUE RIIICOOOOOO, me gusta esa chanfaitita', 'imagenes/Imagen114.jpeg')">
+            <img src="imagenes/Imagen114.jpeg" alt="Foto 114">
+        </div>
         
         
     </div>
