--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             Un universo de amor, sin medida ni censura. </br>
             Así que en este verso te digo con certeza, </br>
             Que en tus ojos hallé la más hermosa belleza.</p>-->
-        <p>Simplemente te amo</p>
+        <p> Te amo más que ayer, pero menos que mañana.</br>
+            Nunca lo dudes pls.</p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
