--- a/Galeria4.html
+++ b/Galeria4.html
@@ -129,7 +129,7 @@
     </div>
     <br>
     <div>
-        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
+        <a href="Galeria5.html" type="button" class="color-button-back"> Siguiente </a>
     </div>
 </footer>
 <br>
