--- a/Galeria5.html
+++ b/Galeria5.html
@@ -40,12 +40,36 @@
             <img src="imagenes/Imagen121.jpeg" alt="Foto 121">
         </div>
 		<div class="photo" onclick="openModal('WTFFF???', 'Beso de 3 dices ajkhhjskadhjasd', 'imagenes/Imagen122.jpeg')">
-            <img src="imagenes/Imagen122.jpeg" alt="Foto 122">
+	    <img src="imagenes/Imagen122.jpeg" alt="Foto 122">
         </div>
 	<div class="photo" onclick="openModal('Foto con el cat', 'Mordiendo su orejita como debe de ser', 'imagenes/Imagen123.jpeg')">
             <img src="imagenes/Imagen123.jpeg" alt="Foto 123">
         </div>
-        
+	<div class="photo" onclick="openModal('Marcadiitooooo', 'Una marquita de la nada jajhskdhjkasdhj', 'imagenes/Imagen124.jpeg')">
+            <img src="imagenes/Imagen124.jpeg" alt="Foto 124">
+        </div>
+	<div class="photo" onclick="openModal('ATan lindaaaa', 'Esa expresión jkhashjkdhjkajsd, necesito esa historia urgenteeee', 'imagenes/Imagen125.jpeg')">
+            <img src="imagenes/Imagen125.jpeg" alt="Foto 125">
+        </div>
+	<div class="photo" onclick="openModal('Sorpresaaaa', 'Terminando mi expo de investigación, fui a llevarle unas lindas flores pq si, la amo mucho mucho', 'imagenes/Imagen126.jpeg')">
+            <img src="imagenes/Imagen126.jpeg" alt="Foto 126">
+        </div>
+	<div class="photo" onclick="openModal('Foto pewo', 'Fotito con tabiiitoooo amooooo, los amo', 'imagenes/Imagen127.jpeg')">
+            <img src="imagenes/Imagen127.jpeg" alt="Foto 127">
+        </div>
+	<div class="photo" onclick="openModal('Descansando mi amorcitooo', 'Descansando como se debe, mi amorcito hermosaaaaaa', 'imagenes/Imagen128.jpeg')">
+	    <img src="imagenes/Imagen128.jpeg" alt="Foto 128">
+        </div>
+	<div class="photo" onclick="openModal('Feliz Navicat', 'Feliz gato navidad, foto del cat frente al árbol que mi amorcito y yo armamos', 'imagenes/Imagen129.jpeg')">
+            <img src="imagenes/Imagen129.jpeg" alt="Foto 129">
+        </div>
+	<div class="photo" onclick="openModal('Saliendo del trabajitooooo', 'Mi amorciitoo recogiéndome en su último día en el hospital', 'imagenes/Imagen130.jpeg')">
+            <img src="imagenes/Imagen130.jpeg" alt="Foto 130">
+        </div>
+	<div class="photo" onclick="openModal('Perroo', 'Pero?, Peeeerrrooooooo', 'imagenes/Imagen131.jpeg')">
+            <img src="imagenes/Imagen131.jpeg" alt="Foto 131">
+        </div>
+
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
     
