--- a/Galeria5.html
+++ b/Galeria5.html
@@ -69,6 +69,25 @@
 	<div class="photo" onclick="openModal('Perroo', 'Pero?, Peeeerrrooooooo', 'imagenes/Imagen131.jpeg')">
             <img src="imagenes/Imagen131.jpeg" alt="Foto 131">
         </div>
+	<div class="photo" onclick="openModal('Arbolito', 'Pude conseguir el arbolito de cerámica y hombre de nieve para pintar juntitos', 'imagenes/Imagen132.jpeg')">
+            <img src="imagenes/Imagen132.jpeg" alt="Foto 132">
+        </div>
+	<div class="photo" onclick="openModal('Aiñ', 'Dolió verlo así, lo amo', 'imagenes/Imagen133.jpeg')">
+            <img src="imagenes/Imagen133.jpeg" alt="Foto 133">
+        </div>
+	<div class="photo" onclick="openModal('Ya mejorando', 'Mostró mejora jhajhsjhdajhsj looodioooo, avil es ps sabe muchas cosas', 'imagenes/Imagen134.jpeg')">
+	    <img src="imagenes/Imagen134.jpeg" alt="Foto 134">
+        </div>
+	<div class="photo" onclick="openModal('No pudo lograrlo', 'En dónde esté sabe que lo amamos', 'imagenes/Imagen134-2.jpeg')">
+            <img src="imagenes/Imagen134-2.jpeg" alt="Foto 134-2">
+        </div>
+	<div class="photo" onclick="openModal('Gato Black', 'In this jai', 'imagenes/Imagen135.jpeg')">
+            <img src="imagenes/Imagen135.jpeg" alt="Foto 135">
+        </div>
+	<div class="photo" onclick="openModal('Lunes', 'Para realizar una nebulización', 'imagenes/Imagen136.jpeg')">
+            <img src="imagenes/Imagen136.jpeg" alt="Foto 136">
+        </div>
+
 
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
