--- a/Galeria5.html
+++ b/Galeria5.html
@@ -87,6 +87,27 @@
 	<div class="photo" onclick="openModal('Lunes', 'Para realizar una nebulización', 'imagenes/Imagen136.jpeg')">
             <img src="imagenes/Imagen136.jpeg" alt="Foto 136">
         </div>
+	<div class="photo" onclick="openModal('Pinshiii rataaaa', 'Bien ella ajhshdjjhashdjhjasjh amo', 'imagenes/Imagen137.jpeg')">
+            <img src="imagenes/Imagen137.jpeg" alt="Foto 137">
+        </div>
+	<div class="photo" onclick="openModal('WTFFF???!!!????', 'Pastilla astetiiiic??!!???', 'imagenes/Imagen138.jpeg')">
+            <img src="imagenes/Imagen138.jpeg" alt="Foto 138">
+        </div>
+	<div class="photo" onclick="openModal('Amandoooo', 'Toda mi amorciiitoooo, hermoso oufi', 'imagenes/Imagen139.jpeg')">
+	    <img src="imagenes/Imagen139.jpeg" alt="Foto 139">
+        </div>
+	<div class="photo" onclick="openModal('Cortecito de cabello', 'Pelón miniiimoooo', 'imagenes/Imagen140.jpeg')">
+            <img src="imagenes/Imagen140.jpeg" alt="Foto 140">
+        </div>
+	<div class="photo" onclick="openModal('Conectando', 'Lit conecta con un niño en puuuff segundos jhashjjhdajhsdjha amo', 'imagenes/Imagen141.jpeg')">
+            <img src="imagenes/Imagen141.jpeg" alt="Foto 141">
+        </div>
+	<div class="photo" onclick="openModal('Primera vez en combi', 'JKHAHJKSDHJKAJSKHD buena experiencia', 'imagenes/Imagen142.jpeg')">
+            <img src="imagenes/Imagen142.jpeg" alt="Foto 142">
+        </div>
+	<div class="photo" onclick="openModal('Ya tocaba ya', 'Manicura dada por mi mininiiitaaaa', 'imagenes/Imagen143.jpeg')">
+            <img src="imagenes/Imagen143.jpeg" alt="Foto 143">
+        </div>
 
 
     </div>
