--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="imagenes/ImagenA.jpeg">
-    <title>Tengamos un buen ciclo</title>
+    <title>Tengamos un gran verano</title>
 </head>
 
 <body>
     <div class="windows" id="win">
-        <p> Recuerda dar todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices 😼.</p>
+        <p> Eres quien me ayudó cuando más lo necesite, te amo con todo mi corazón, terminamos este año juntos, no solo este año, sino los siguientes y siguientes amor, gato beesooooo 😼.</p>
 
         <div id="cerrar">
             <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
@@ -19,19 +19,7 @@
     </div>
 
     <div class="container">
-        <h1>Por fin encontramos a las personas correctas mininito</h1>
-        <!--<p>Da todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices. Ya se viene el
-            buen estrés, presión y tareas 😼.</p>
-        <p>Te quiere bonito,<br>Renzo</p>
-        <p> Tus ojos brillan como el cielo estrellado, </br>
-            En ellos encuentro un amor tan apasionado. </br>
-            Como rosas rojas, de pasión encendidos, </br>
-            Y como violetas azules, en ellos perdidos. </br>
-            </br>
-            En tu mirada encuentro un mundo de ternura, </br>
-            Un universo de amor, sin medida ni censura. </br>
-            Así que en este verso te digo con certeza, </br>
-            Que en tus ojos hallé la más hermosa belleza.</p>-->
+        <h1>Feliz año nuevo luz de mis ojos</h1>
         <p> Te amo más que ayer, pero menos que mañana.</br>
             Nunca lo dudes pls.</p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
