--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="windows" id="win">
-        <p> Eres quien me ayudó cuando más lo necesite, te amo con todo mi corazón, terminamos este año juntos, no solo este año, sino los siguientes y siguientes amor, gato beesooooo 😼.</p>
+        <p> Eres quien me ayudó cuando más lo necesite, te amo con todo mi corazón, terminamos este año juntos, no solo este año también los proximos de los proximos, gato beesooooo 😼.</p>
 
         <div id="cerrar">
             <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
