--- a/Galeria5.html
+++ b/Galeria5.html
@@ -110,6 +110,19 @@
         </div>
 
 
+	<div class="photo" onclick="openModal('Happis', 'Siempre happis jhajhskdjhasd, a la fifi mucho sueño XD', 'imagenes/Imagen144.jpeg')">
+            <img src="imagenes/Imagen144.jpeg" alt="Foto 144">
+        </div>
+	<div class="photo" onclick="openModal('Esa botella se abrió solaaa', 'Mi amorciiitoooo abrió la botella solita con su manita hermooosaaaaa', 'imagenes/Imagen145.jpeg')">
+            <img src="imagenes/Imagen145.jpeg" alt="Foto 145">
+        </div>
+	<div class="photo" onclick="openModal('Rico ricooo', 'Ultima salchi del añooo', 'imagenes/Imagen146.jpeg')">
+            <img src="imagenes/Imagen146.jpeg" alt="Foto 146">
+        </div>
+	<div class="photo" onclick="openModal('Snowmaanitos', 'Amo realizar estas cosillas con mi amorciitoooo', 'imagenes/Imagen147.jpeg')">
+            <img src="imagenes/Imagen147.jpeg" alt="Foto 147">
+        </div>
+
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
     
