--- a/Galeria5.html
+++ b/Galeria5.html
@@ -108,8 +108,6 @@
 	<div class="photo" onclick="openModal('Ya tocaba ya', 'Manicura dada por mi mininiiitaaaa', 'imagenes/Imagen143.jpeg')">
             <img src="imagenes/Imagen143.jpeg" alt="Foto 143">
         </div>
-
-
 	<div class="photo" onclick="openModal('Happis', 'Siempre happis jhajhskdjhasd, a la fifi mucho sueño XD', 'imagenes/Imagen144.jpeg')">
             <img src="imagenes/Imagen144.jpeg" alt="Foto 144">
         </div>
@@ -160,7 +158,7 @@
     </div>
     <br>
     <div>
-        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
+        <a href="Galeria6.html" type="button" class="color-button-back"> Siguiente </a>
     </div>
 </footer>
 <br>
