--- a/Galeria6.html
+++ b/Galeria6.html
@@ -24,8 +24,38 @@
         <div class="photo" onclick="openModal('Amando', 'Como trata al corderito que le di, amo como está en camita viendo su doramita', 'imagenes/Imagen149.jpeg')">
             <img src="imagenes/Imagen149.jpeg" alt="Foto 149">
         </div>
-	      <div class="photo" onclick="openModal('Maldito gaaatoooo', 'Me arañó mientras huia de todos ajsjhdhjajhsd aún está marcado jijijj', 'imagenes/Imagen150.jpeg')">
+	<div class="photo" onclick="openModal('Maldito gaaatoooo', 'Me arañó mientras huia de todos ajsjhdhjajhsd aún está marcado jijijj', 'imagenes/Imagen150.jpeg')">
             <img src="imagenes/Imagen150.jpeg" alt="Foto 150">
+        </div>
+	<div class="photo" onclick="openModal('El mejor fondo', 'Empezando el año con el mejor fondo de pantalla', 'imagenes/Imagen151.jpeg')">
+            <img src="imagenes/Imagen151.jpeg" alt="Foto 151">
+        </div>
+        <div class="photo" onclick="openModal('Pomuloooooooos', 'Esa sonrisa con esos hermosos pomulos y su piyamiiitaaa amo', 'imagenes/Imagen152.jpeg')">
+            <img src="imagenes/Imagen152.jpeg" alt="Foto 152">
+        </div>
+	<div class="photo" onclick="openModal('Gato negrooooo', 'Jatazo el maldito gato de miercoles XDXDXDXDD', 'imagenes/Imagen153.jpeg')">
+            <img src="imagenes/Imagen153.jpeg" alt="Foto 153">
+        </div>
+	<div class="photo" onclick="openModal('Buscando el jaboncito que me dijo mi amorcito', 'Litt busqué por todas las farmacias de Chillón, y lo encontré Xd', 'imagenes/Imagen154.jpeg')">
+            <img src="imagenes/Imagen154.jpeg" alt="Foto 154">
+        </div>
+        <div class="photo" onclick="openModal('Ayayayay', 'Llegarón los chocolatos que más le encantan, amo su emoción', 'imagenes/Imagen155.jpeg')">
+            <img src="imagenes/Imagen155.jpeg" alt="Foto 155">
+        </div>
+	<div class="photo" onclick="openModal('Las mejores', 'Las mejores canchitas dulces de la maldite vida', 'imagenes/Imagen156.jpeg')">
+            <img src="imagenes/Imagen156.jpeg" alt="Foto 156">
+        </div>
+	<div class="photo" onclick="openModal('2 bandides', 'Mi amorcito fue a comprar 2 four loko por mi pq estaba en el trabajo Xd, amo jhajhsdhjahjsdhjasd', 'imagenes/Imagen157.jpeg')">
+            <img src="imagenes/Imagen157.jpeg" alt="Foto 157">
+        </div>
+	<div class="photo" onclick="openModal('No ps la más hermosa del mundo', 'Del mundo??, del universo, mi mininita', 'imagenes/Imagen158.jpeg')">
+            <img src="imagenes/Imagen158.jpeg" alt="Foto 158">
+        </div>
+        <div class="photo" onclick="openModal('Aaaaww siempre mininita', 'Guardando los petalos de las flores que le dí a mi amorcito', 'imagenes/Imagen159.jpeg')">
+            <img src="imagenes/Imagen159.jpeg" alt="Foto 159">
+        </div>
+	<div class="photo" onclick="openModal('😮', '😮', 'imagenes/Imagen160.jpeg')">
+            <img src="imagenes/Imagen160.jpeg" alt="Foto 160">
         </div>
 
       
