--- a/Galeria6.html
+++ b/Galeria6.html
@@ -57,7 +57,36 @@
 	<div class="photo" onclick="openModal('😮', '😮', 'imagenes/Imagen160.jpeg')">
             <img src="imagenes/Imagen160.jpeg" alt="Foto 160">
         </div>
-
+		<div class="photo" onclick="openModal('Conexión', 'Coneeejoooo, bendito conejó conectó con mi amorcito', 'imagenes/Imagen161.jpeg')">
+            <img src="imagenes/Imagen161.jpeg" alt="Foto 161">
+        </div>
+	<div class="photo" onclick="openModal('Besoooo Luke', 'Yarita su nuevo fondis de pantalla jijij', 'imagenes/Imagen162.jpeg')">
+            <img src="imagenes/Imagen162.jpeg" alt="Foto 162">
+        </div>
+	<div class="photo" onclick="openModal('Rizando pestañitas', 'Yo solo las pongo para arriba y queda jkasjhdjhashjd', 'imagenes/Imagen163.jpeg')">
+            <img src="imagenes/Imagen163.jpeg" alt="Foto 163">
+        </div>
+	<div class="photo" onclick="openModal('El diablo y el bebe', 'Yo te ahorco así aaaaahhhhh', 'imagenes/Imagen164.jpeg')">
+            <img src="imagenes/Imagen164.jpeg" alt="Foto 164">
+        </div>
+	<div class="photo" onclick="openModal('Ya en el avión', 'Mi mininita a disfrutar sus vacaciones amoooooooo', 'imagenes/Imagen165.jpeg')">
+            <img src="imagenes/Imagen165.jpeg" alt="Foto 165">
+        </div>
+	<div class="photo" onclick="openModal('Need eso', 'Mi mininita bella piola relajadita en la casita de playa jijijj', 'imagenes/Imagen166.jpeg')">
+            <img src="imagenes/Imagen166.jpeg" alt="Foto 166">
+        </div>
+	<div class="photo" onclick="openModal('Pewos paseados', 'Salimos a pasear y a disfrutar de todo el parque litt ajjshdjhajhsdj', 'imagenes/Imagen167.jpeg')">
+            <img src="imagenes/Imagen167.jpeg" alt="Foto 167">
+        </div>
+	<div class="photo" onclick="openModal('Un bello atardecer', 'Amo a mi mininita hermosa', 'imagenes/Imagen168.jpeg')">
+            <img src="imagenes/Imagen168.jpeg" alt="Foto 168">
+        </div>
+	<div class="photo" onclick="openModal('Aaaawww', 'Mi amorcito más cursi que nunca', 'imagenes/Imagen169.jpeg')">
+            <img src="imagenes/Imagen169.jpeg" alt="Foto 169">
+        </div>	
+	<div class="photo" onclick="openModal('Luko', 'Luke posando para mandarle fotis a su madreeee', 'imagenes/Imagen170.jpeg')">
+            <img src="imagenes/Imagen170.jpeg" alt="Foto 170">
+        </div>
       
 
     </div>
