--- a/Galeria6.html
+++ b/Galeria6.html
@@ -57,7 +57,7 @@
 	<div class="photo" onclick="openModal('😮', '😮', 'imagenes/Imagen160.jpeg')">
             <img src="imagenes/Imagen160.jpeg" alt="Foto 160">
         </div>
-		<div class="photo" onclick="openModal('Conexión', 'Coneeejoooo, bendito conejó conectó con mi amorcito', 'imagenes/Imagen161.jpeg')">
+		<div class="photo" onclick="openModal('Conexión', 'Coneeejoooo, bendito conejo conectó con mi amorcito', 'imagenes/Imagen161.jpeg')">
             <img src="imagenes/Imagen161.jpeg" alt="Foto 161">
         </div>
 	<div class="photo" onclick="openModal('Besoooo Luke', 'Yarita su nuevo fondis de pantalla jijij', 'imagenes/Imagen162.jpeg')">
