--- a/Galeria6.html
+++ b/Galeria6.html
@@ -86,8 +86,36 @@
         </div>	
 	<div class="photo" onclick="openModal('Luko', 'Luke posando para mandarle fotis a su madreeee', 'imagenes/Imagen170.jpeg')">
             <img src="imagenes/Imagen170.jpeg" alt="Foto 170">
+        </div>      
+	<div class="photo" onclick="openModal('Lukito posando siempre', 'El ama a su hermosa madre, mi mininita es muy afortunada al tener a este pewiitoooo', 'imagenes/Imagen171.jpeg')">
+            <img src="imagenes/Imagen171.jpeg" alt="Foto 171">
         </div>
-      
+	<div class="photo" onclick="openModal('Tabiiitooo', 'Mi Tabito no se queda atrás y posa para su madre', 'imagenes/Imagen172.jpeg')">
+            <img src="imagenes/Imagen172.jpeg" alt="Foto 172">
+        </div>
+	<div class="photo" onclick="openModal('Esperando en el aeropuerto', 'En el patio de comida esperando a mi amorcito hermosa', 'imagenes/Imagen173.jpeg')">
+            <img src="imagenes/Imagen173.jpeg" alt="Foto 173">
+        </div>
+	<div class="photo" onclick="openModal('Paseando en el aeropuerto akjsjkdjaksd', 'Me hicieron pasear ps ajhsjhkdkhjashjd', 'imagenes/Imagen174.jpeg')">
+            <img src="imagenes/Imagen174.jpeg" alt="Foto 174">
+        </div>
+	<div class="photo" onclick="openModal('Mininiteee doradaaa', 'Litt amo su bronceado', 'imagenes/Imagen175.jpeg')">
+            <img src="imagenes/Imagen175.jpeg" alt="Foto 175">
+        </div>
+	<div class="photo" onclick="openModal('Jatazo litt', 'Tmr ese gato y yo haciendo piyamadas siempre, nadie nos detendrá, nunca', 'imagenes/Imagen176.jpeg')">
+            <img src="imagenes/Imagen176.jpeg" alt="Foto 176">
+        </div>
+	<div class="photo" onclick="openModal('PTMR AMO ESOS PANES', 'Mi amor pls solo comeré esos pancitos hechos por ti, mi mamá también hace esos panes, pero a ti te salen muchisisisiimos más ricos, no le digas jijijjj', 'imagenes/Imagen177.jpeg')">
+            <img src="imagenes/Imagen177.jpeg" alt="Foto 177">
+        </div>
+	<div class="photo" onclick="openModal('Fotis juntis', 'askhjkjhaskjh está hermosamente bronceada, amo❤️', 'imagenes/Imagen178.jpeg')">
+            <img src="imagenes/Imagen178.jpeg" alt="Foto 178">
+        </div>
+	<div class="photo" onclick="openModal('Cremoladiteeeee', 'Para calmar esos dolorcitos de cabeza', 'imagenes/Imagen179.jpeg')">
+            <img src="imagenes/Imagen179.jpeg" alt="Foto 179">
+        </div>
+	<div class="photo" onclick="openModal('Patanazcos', 'No se como se llamaban, dime pls jhashjdhjashjdhja', 'imagenes/Imagen180.jpeg')">
+            <img src="imagenes/Imagen180.jpeg" alt="Foto 180">
 
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
